src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_65_1.deca
// Description:
//    regle 3.65, pas une classe
//
// Resultats:
//    Ligne 8: Expression type must be a class.
{
    int x = 1;
    int a = x.a;
}